--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "web_app_generator",
   "version": "1.1.0",
-  "description": "Op to scaffold Apps using popular frameworks.",
+  "description": "Op to scaffold code for popular Web Application Frameworks.",
   "main": "index.js",
   "scripts": {
     "build": "tsc",
